--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "compile": "rollup --config",
+    "compile-dev": "rollup --config --watch",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.2.45",
     "expo": "^50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -18,8 +21,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@expo/metro-runtime": "~3.1.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-typescript": "^11.1.6",
     "react-dom": "^18.2.0",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "rollup": "^4.13.0",
+    "tsc": "^2.0.4",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.3"
   },
   "private": true,
   "repository": {
