--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/match-media": "^0.4.0",
     "@types/react": "~18.2.45",
     "expo": "^50.0.14",
+    "expo-image": "^1.10.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
