--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
   },
   "dependencies": {
     "@expo/match-media": "^0.4.0",
-    "@types/react": "~18.2.45",
-    "expo": "^50.0.14",
-    "expo-image": "^1.10.6",
-    "expo-status-bar": "~1.11.1",
+    "@types/react": "^18.2.79",
+    "expo": "^51.0.8",
+    "expo-image": "^1.12.9",
+    "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.74.1",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "^4.10.1",
     "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "^3.2.1",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-typescript": "^11.1.6",
     "react-dom": "^18.2.0",
@@ -33,7 +33,7 @@
     "rollup": "^4.13.0",
     "tsc": "^2.0.4",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.3.3"
   },
   "private": true,
   "repository": {
