--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start-node": "node ./js/node.app.mjs",
+    "start-node-dev": "nodemon ./js/node.app.mjs",
     "compile": "rollup --config",
     "compile-dev": "rollup --config --watch",
     "android": "expo start --android",
@@ -28,6 +30,7 @@
     "@expo/metro-runtime": "^3.2.1",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-typescript": "^11.1.6",
+    "nodemon": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.10",
     "rollup": "^4.13.0",
