--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "start-node-dev": "nodemon ./js/node.app.mjs",
     "compile": "rollup --config",
     "compile-dev": "rollup --config --watch",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "build-web": "expo run:web",
+    "build-android": "expo run:android",
+    "build-ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/match-media": "^0.4.0",
     "@types/react": "^18.2.79",
-    "expo": "^51.0.9",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "cracksdb": "^0.1.0",
+    "expo": "^51.0.14",
     "expo-image": "^1.12.9",
     "expo-status-bar": "^1.12.1",
+    "express": "^4.19.2",
     "react": "18.2.0",
-    "react-native": "^0.74.1",
+    "react-native": "^0.74.3",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-responsive": "^10.0.0"
@@ -30,6 +34,8 @@
     "@expo/metro-runtime": "^3.2.1",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "nodemon": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.10",
