--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "A cross-platform peer-to-peer chat application made with javascript.",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start-app": "expo start",
-    "start-server": "node ./js/server.mjs",
-    "start-server-dev": "nodemon ./js/server.mjs",
+    "start-expo": "expo start",
+    "start-electron": "electron electron.mjs",
     "compile": "rollup --config",
     "compile-dev": "rollup --config --watch",
     "build-web": "expo run:web",
@@ -19,14 +18,15 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "cracksdb": "^0.1.0",
-    "expo": "^51.0.14",
-    "expo-image": "^1.12.9",
+    "electron": "^31.2.1",
+    "expo": "^51.0.21",
+    "expo-image": "^1.12.13",
     "expo-status-bar": "^1.12.1",
     "express": "^4.19.2",
     "react": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-responsive": "^10.0.0"
   },
   "devDependencies": {
