--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "electron-is-dev": "^3.0.1",
     "nodemon": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.10",
