--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native": "^0.74.3",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.5",
-    "react-responsive": "^10.0.0"
+    "react-responsive": "^10.0.0",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
