--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "@types/react": "^18.2.79",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "cracksdb": "^0.1.3",
+    "cracksdb": "^1.0.0",
     "electron": "^31.2.1",
     "expo": "^51.0.21",
     "expo-image": "^1.12.13",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "^1.12.1",
     "express": "^4.19.2",
     "react": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.5",
-    "react-responsive": "^10.0.0",
-    "sharp": "^0.33.4"
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
