--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "cors": "^2.8.5",
     "cracksdb": "^1.0.0",
     "electron": "^31.2.1",
-    "expo": "^51.0.21",
+    "expo": "^51.0.22",
     "expo-image": "^1.12.13",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "^1.12.1",
@@ -28,7 +28,8 @@
     "react-native": "^0.74.3",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.5",
-    "react-responsive": "^10.0.0"
+    "react-responsive": "^10.0.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
