--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.5",
     "react-responsive": "^10.0.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
