--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-electron": "electron electron.mjs",
     "compile": "rollup --config",
     "compile-dev": "rollup --config --watch",
-    "build-web": "expo run:web",
+    "build-web": "expo export --platform web",
     "build-android": "expo run:android",
     "build-ios": "expo run:ios"
   },
@@ -29,6 +29,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.5",
     "react-responsive": "^10.0.0",
+    "serve-handler": "^6.1.5",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
