README update / rename assets dir to public, and change resource urls accordingly / designate out dir for all compiles and build exports / compile, build-web, and start-electron npm commands work in harmony

--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "yellow",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./public/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./public/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -20,20 +20,20 @@
     "android": {
       "softwareKeyboardLayoutMode": "pan",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./public/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.moehab.yellow"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./public/favicon.png"
     },
     "plugins": [
       [
         "expo-font",
         {
           "fonts": [
-            "./assets/Jua-Regular.ttf"
+            "./public/Jua-Regular.ttf"
           ]
         }
       ],
