--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start-expo": "expo start",
-    "start-electron": "electron electron.mjs",
+    "start-electron": "electron out/js/electron.js",
     "compile": "rollup --config",
     "compile-dev": "rollup --config --watch",
-    "build-web": "expo export --platform web",
+    "build-web": "expo export --platform web --output-dir out/web",
+    "build-exe": "electron-forge make",
     "build-android": "expo run:android",
     "build-ios": "expo run:ios"
   },
@@ -18,7 +19,6 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "cracksdb": "^1.0.1",
-    "electron": "^31.2.1",
     "expo": "^51.0.22",
     "expo-image": "^1.12.13",
     "expo-image-picker": "~15.0.7",
@@ -35,12 +35,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@expo/metro-runtime": "^3.2.1",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "electron-is-dev": "^3.0.1",
+    "electron": "^31.3.0",
+    "electron-squirrel-startup": "^1.0.1",
     "nodemon": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.10",
