out dir is renamed to resources for compiance with electron architecture. npm build-exe is modified in order to make it easy to produce working executable file without changing config files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 # dependencies
 node_modules/
 
+# compilations
+out
+resources
+
 # Expo
 .expo/
 dist/
@@ -34,5 +38,3 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
-# compilation files
-js
