--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start-expo": "expo start",
-    "start-electron": "electron out/js/electron.js",
+    "start-electron": "electron resources/js/electron.js",
     "compile": "rollup --config",
     "compile-dev": "rollup --config --watch",
-    "build-web": "expo export --platform web --output-dir out/web",
-    "build-exe": "electron-forge make",
+    "build-web": "expo export --platform web --output-dir resources/web",
+    "build-exe": "node ./forge.build.js make",
     "build-android": "expo run:android",
     "build-ios": "expo run:ios"
   },
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "cracksdb": "^1.0.1",
+    "electron-squirrel-startup": "^1.0.1",
     "expo": "^51.0.22",
     "expo-image": "^1.12.13",
     "expo-image-picker": "~15.0.7",
@@ -45,8 +46,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "electron": "^31.3.0",
-    "electron-squirrel-startup": "^1.0.1",
     "nodemon": "^3.1.3",
+    "prettier": "^3.3.3",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.10",
     "rollup": "^4.13.0",
