--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start-expo": "expo start",
-    "start-electron": "electron resources/js/electron.js",
+    "start-electron": "electron resources/js/electron.js --dev",
     "compile": "rollup --config",
     "compile-dev": "rollup --config --watch",
     "build-web": "expo export --platform web --output-dir resources/web",
+    "build-exe-try": "node ./forge.build.js start",
     "build-exe": "node ./forge.build.js make",
     "build-android": "expo run:android",
     "build-ios": "expo run:ios"
