--- a/app.json
+++ b/app.json
@@ -11,9 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -32,9 +30,7 @@
       [
         "expo-font",
         {
-          "fonts": [
-            "./public/Jua-Regular.ttf"
-          ]
+          "fonts": ["./public/Jua-Regular.ttf"]
         }
       ],
       [
